feat: add cafe page

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>작카: 작업하기 좋은 카페</title>
+    <title>작카 - 작업하기 좋은 카페</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Stylish&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%VITE_NAVER_CLOUD_PLATFORM_CLIENT_ID%"></script>
   </head>
   <body>
     <div id="root"></div>
